--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,30 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "downlevelIteration": true,
+    "importHelpers": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "target": "es2015",
+    "paths": {
+      "ip": [
+        "./node_modules/ip/lib/ip.js"
+      ]
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
+      "es2017",
       "dom"
-    ]
-  },
-  "include": [
-    "node_modules/angular-bootstrap-md/**/*.ts",
-    "src/**/*.ts"
-  ]
+    ],
+    "module": "esnext",
+    "baseUrl": "./"
+  }
 }
